--- a/templates/base.html
+++ b/templates/base.html
@@ -423,11 +423,11 @@
                                                         
                             
                             {% if perms.core.view_ref_ins_client %}
-                            <a href="#" class="flex items-center px-2 py-0.5 text-xs font-normal text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200">
+                            <a href="{% url 'core:refinsclient_list' %}" class="flex items-center px-2 py-0.5 text-xs font-normal text-gray-700 rounded-md hover:bg-gray-100 hover:text-accounting-blue transition-colors duration-200 {% if 'refinsclient' in request.path %}bg-gray-100 text-accounting-blue{% endif %}">
                                 <svg class="h-4 w-4 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
                                 </svg>
-                                ДААТГАЛЫН ХАРИЛЦАГЧ
+                                ДААТГУУЛАГЧ
                             </a>
                             {% endif %}
                             
